Stray punctuation fix.

--- a/edit/saml2int/sp_requirements.adoc
+++ b/edit/saml2int/sp_requirements.adoc
@@ -161,7 +161,7 @@ _The full-frame requirement is also necessary to ensure that full control of the
 
 ===== Request Content
 
-[SDP-SP29]:: Requests MUST be signed (via a signature created in accordance with the HTTP=Redirect binding [SAML2Bind]).
+[SDP-SP29]:: Requests MUST be signed (via a signature created in accordance with the HTTP-Redirect binding [SAML2Bind]).
 
 [SDP-SP30]:: The `<saml:NameID>` element included in `<samlp:LogoutRequest>` messages MUST exactly match the corresponding element received from the IdP, including its element content and all XML attributes included therein.
 
@@ -179,7 +179,7 @@ _The normative requirement for the use of transient identifiers is intended to o
 
 ===== Response Content
 
-[SDP-SP34]:: Responses MUST be signed (via a signature created in accordance with the HTTP=Redirect binding [SAML2Bind]).
+[SDP-SP34]:: Responses MUST be signed (via a signature created in accordance with the HTTP-Redirect binding [SAML2Bind]).
 
 ==== Behavioral Requirements
 
