Small wording change to IDP10

--- a/edit/saml2int/idp_requirements.adoc
+++ b/edit/saml2int/idp_requirements.adoc
@@ -42,7 +42,7 @@ If an IdP cannot prove subject presence, then it MUST fail the request and SHOUL
 
 [SDP-IDP09]:: Successful responses MUST be directly signed using a `<ds:Signature>` element within the `<samlp:Response>` element. Error responses MAY be unsigned.
 
-[SDP-IDP10]:: Successful responses MUST contain one and only one SAML assertion. The assertion MUST contain exactly one `<saml:AuthnStatement>` element and MUST contain zero or one `<saml:AttributeStatement>` elements. The assertion within the response MAY be directly signed.
+[SDP-IDP10]:: Successful responses MUST contain exactly one SAML assertion. The assertion MUST contain exactly one `<saml:AuthnStatement>` element and MUST contain zero or one `<saml:AttributeStatement>` elements. The assertion within the response MAY be directly signed.
 
 [SDP-IDP11]:: In the event the HTTP-POST binding <<SAML2Bind>> is used, assertions MUST be encrypted and transmitted via a `<saml:EncryptedAssertion>` element. Information intended for the consumption of the SP MUST NOT be further encrypted via `<saml:EncryptedID>` or `<saml:EncryptedAttribute>` constructs.
 
