--- a/edit/saml2int/contributors.adoc
+++ b/edit/saml2int/contributors.adoc
@@ -15,7 +15,7 @@
 
 * Andreas Åkre Solberg, UNINETT, andreas.solberg@uninett.no
 * Scott Cantor, Ohio State University, cantor.2@osu.edu
-* Eve Maler, Sun Microsystems, eve.maler@sun.com
+* Eve Maler, ForgeRock, eve.maler@forgerock.com
 * Leif Johansson, SUNET, leifj@sunet.se
 * Jeff Hodges, Neustar, Jeff.Hodges@neustar.biz
 * Ian Young, Independent, ian@iay.org.uk
