--- a/edit/saml2int/contributors.adoc
+++ b/edit/saml2int/contributors.adoc
@@ -17,7 +17,7 @@
 * Scott Cantor, Ohio State University, cantor.2@osu.edu
 * Eve Maler, ForgeRock, eve.maler@forgerock.com
 * Leif Johansson, SUNET, leifj@sunet.se
-* Jeff Hodges, Neustar, Jeff.Hodges@neustar.biz
+* Jeff Hodges, Kings Mountain Systems, Jeff.Hodges@KingsMountain.com
 * Ian Young, Independent, ian@iay.org.uk
 * Nate Klingenstein, Signet, Inc., ndk@signet.id
 * Bob Morgan, University of Washington, rlmorgan@washington.edu
