--- a/edit/saml2int/sp_requirements.adoc
+++ b/edit/saml2int/sp_requirements.adoc
@@ -211,7 +211,7 @@ The ability to perform seamless key migration depends upon proper support for co
 ** at least one `<md:AssertionConsumerService>` endpoint element
 ** at least one `<md:KeyDescriptor>` element whose `use` attribute is omitted or set to `encryption`
 * an `<md:Extensions>` element
-** an `<mdui:UIInfo>` extension element with previously prescribed content and `<mdui:PrivacyStatementURL>`
+** an `<mdui:UIInfo>` extension element containing the child elements `<mdui:DisplayName>`, `<mdui:Logo>`, and `<mdui:InformationURL>`
 ** an `<mdattr:EntityAttributes>` extension element for signaling Subject Identifier requirements with previously prescribed content
 
 If the SP supports the Single Logout Profile, then its metadata MUST contain (within its `<md:SPSSODescriptor>` role element):
@@ -222,3 +222,4 @@ If the SP supports the Single Logout Profile, then its metadata MUST contain (wi
 Finally, an SP's metadata MUST also contain:
 
 * an `<md:ContactPerson>` element with a `contactType` of `technical` and an `<md:EmailAddress>` element
+* the `<mdui:UIInfo>` extension element must also contain a child element `<mdui:PrivacyStatementURL>`
