Added cc-by-4.0 license

--- a/edit/saml2int/main.adoc
+++ b/edit/saml2int/main.adoc
@@ -16,6 +16,7 @@ SAML V2.0 Interoperability Deployment Profile V1.0 (Draft)
 Version:: 0.05
 Date:: {docdate}
 Status:: Community Draft
+License:: https://creativecommons.org/licenses/by/4.0/[Creative Commons Attribution 4.0 International]
 
 .Required Information
 Document identifier: TBD
