--- a/edit/saml2int/sp_requirements.adoc
+++ b/edit/saml2int/sp_requirements.adoc
@@ -207,12 +207,12 @@ The ability to perform seamless key migration depends upon proper support for co
 
 [SDP-SP40]:: By virtue of this profile's requirements, an SP's metadata MUST contain:
 
-* an `<md:SPSSODescriptor>` role element
+* an `<md:SPSSODescriptor>` role element containing
 ** at least one `<md:AssertionConsumerService>` endpoint element
 ** at least one `<md:KeyDescriptor>` element whose `use` attribute is omitted or set to `encryption`
 ** an `<md:ContactPerson>` element with a `contactType` of `technical` and an `<md:EmailAddress>` element
 
-* an `<md:Extensions>` element
+* an `<md:Extensions>` element containing
 ** an `<mdui:UIInfo>` extension element containing the child elements `<mdui:DisplayName>`, `<mdui:Logo>`, and `<mdui:PrivacyStatementURL>`
 ** an `<mdattr:EntityAttributes>` extension element for signaling Subject Identifier requirements with previously prescribed content
 
