Added "role level" to SP40 second bullet

--- a/edit/saml2int/sp_requirements.adoc
+++ b/edit/saml2int/sp_requirements.adoc
@@ -212,7 +212,7 @@ The ability to perform seamless key migration depends upon proper support for co
 ** at least one `<md:KeyDescriptor>` element whose `use` attribute is omitted or set to `encryption`
 ** an `<md:ContactPerson>` element with a `contactType` of `technical` and an `<md:EmailAddress>` element
 
-* an `<md:Extensions>` element containing
+* an `<md:Extensions>` element at the role level containing
 ** an `<mdui:UIInfo>` extension element containing the child elements `<mdui:DisplayName>`, `<mdui:Logo>`, and `<mdui:PrivacyStatementURL>`
 ** an `<mdattr:EntityAttributes>` extension element for signaling Subject Identifier requirements with previously prescribed content
 
