--- a/edit/saml2int/idp_requirements.adoc
+++ b/edit/saml2int/idp_requirements.adoc
@@ -102,7 +102,7 @@ _The term "IdP session" is used to refer to the ongoing state between the IdP an
 
 ==== Request Content
 
-[SDP-IDP26]:: Requests MUST be signed ((via a signature created in accordance with the HTTP-Redirect binding [SAML2Bind]).
+[SDP-IDP26]:: Requests MUST be signed (via a signature created in accordance with the HTTP-Redirect binding [SAML2Bind]).
 
 [SDP-IDP27]:: The `<saml:NameID>` element in `<samlp:LogoutRequest>` messages MUST NOT be encrypted.
 
