--- a/edit/saml2int/common_requirements.adoc
+++ b/edit/saml2int/common_requirements.adoc
@@ -71,6 +71,8 @@ _By virtue of <<SAML2MDIOP>>, this profile (and SAML in general) does not place 
 * _do not use expired certificates_
 * _do not sign certificates with MD5- or SHA1-based signature algorithms_
 
+[indent=0]
+
 [SDP-MD06]:: RSA public keys MUST be at least 2048 bits in length. At least 3072 bits is RECOMMENDED for new deployments.
 
 [SDP-MD07]:: EC public keys MUST be at least 256 bits in length.
