--- a/edit/saml2int/sp_requirements.adoc
+++ b/edit/saml2int/sp_requirements.adoc
@@ -1,5 +1,7 @@
 == SP Requirements
 
+This section provides requirements specific to SPs, in addition to the Common Requirements above.
+
 === Web Browser SSO
 
 [SDP-SP01]:: SPs MUST support the Browser SSO Profile <<SAML2Prof>>, as updated by the Approved Errata <<SAML2Err>>, with behavior, capabilities, and options consistent with the additional constraints specified in this section.
