--- a/edit/saml2int/idp_requirements.adoc
+++ b/edit/saml2int/idp_requirements.adoc
@@ -141,11 +141,10 @@ The ability to perform seamless key migration depends upon proper support for co
 ** at least one `<md:SingleLogoutService>` endpoint element
 ** at least one `<md:KeyDescriptor>` element whose `use` attribute is omitted or set to `signing`
 ** an `<md:ContactPerson>` element with a `contactType` of `technical` and an `<md:EmailAddress>` element
+** an <`md:errorURL>` attribute
 
 * an `<md:Extensions>` element at the role level containing
 ** an `<mdui:UIInfo>` extension element containing the child elements `<mdui:DisplayName>` and `<mdui:Logo>`
 ** at least one `<shibmd:Scope>` element 
 *** alternately, the `<shibmd:Scope>` element(s) MAY instead reside in an `<md:Extensions>` element at the root (`<md:EntityDescriptor>`) level 
-
-* an `errorURL` attribute containing an https URL resolving to an HTML page suitable for referral by SPs in the event they receive insufficient attributes from the IdP to proceed
 
