--- a/edit/saml2int/references.adoc
+++ b/edit/saml2int/references.adoc
@@ -19,6 +19,7 @@
 - [[[SAML2ASLO]]] OASIS Committee Specification, SAML V2.0 Asynchronous Single Logout Profile Extension Version 1.0, November 2012. http://docs.oasis-open.org/security/saml/Post2.0/saml-async-slo/v1.0/cs01/saml-async-slo-v1.0-cs01.pdf
 - [[[MetaUI]]] OASIS Committee Specification, SAML V2.0 Metadata Extensions for Login and Discovery User Interface Version 1.0, April 2012. http://docs.oasis-open.org/security/saml/Post2.0/sstc-saml-metadata-ui/v1.0/cs01/sstc-saml-metadata-ui-v1.0-cs01.pdf
 - [[[MetaAttr]]] OASIS Committee Specification, SAML V2.0 Metadata Extension for Entity Attributes Version 1.0, August 2009. http://docs.oasis-open.org/security/saml/Post2.0/sstc-metadata-attr-cs-01.pdf
+- [[[SAML2Impl]]] Kantara Initiative Profile, SAML V2.0 Implementation Profile for Federation Interoperability Version 1.0, April 2018. https://kantarainitiative.github.io/SAMLprofiles/fedinterop.html
 
 == Non-Normative References
 
