Align formatting with Kantara template.

--- a/edit/saml2int/contributors.adoc
+++ b/edit/saml2int/contributors.adoc
@@ -1,6 +1,6 @@
-== Authors - SAML2int v2.0
+.Contributors - SAML2int v2.0
 
-* Keith Wessel (Editor), University of Illinois at Urbana-Champaign, kwessel@illinois.edu (https://orcid.org/0000-0002-8047-3187)
+* Keith Wessel - _Editor_, University of Illinois at Urbana-Champaign, kwessel@illinois.edu (https://orcid.org/0000-0002-8047-3187)
 * Scott Cantor, Ohio State University, cantor.2@osu.edu
 * Eric Goodman, University of California, Office of The President, eric.goodman@ucop.edu (https://orcid.org/0000-0002-5118-3009)
 * Andrew Morgan, Oregon State University, morgan@oregonstate.edu (https://orcid.org/0000-0003-0677-6988)
@@ -12,7 +12,7 @@
 * Nicholas Roy, Internet2, nroy@internet2.edu (https://orcid.org/0000-0001-6515-4316)
 * Alan Buxey, MyUniDays, LTD., alan.buxey@myunidays.com (https://orcid.org/0000-0001-8217-8379)
 
-== Authors - SAML2int previous versions
+.Contributors - SAML2int previous versions
 
 * Andreas Åkre Solberg, UNINETT, andreas.solberg@uninett.no
 * Eve Maler, ForgeRock, eve.maler@forgerock.com
