--- a/edit/saml2int/main.adoc
+++ b/edit/saml2int/main.adoc
@@ -1,22 +1,35 @@
-= SAML V2.0 Interoperability Deployment Profile
+= SAML V2.0 Interoperability Deployment Profile Version 2.0
 :numbered:
 :toc:
 :toc-placement: preamble
 :docinfo:
 :notitle:
+:nofooter:
 
 // did not manage to CSS-select the top-level title: instead using :notitle: plus following pass-though
 ++++
 <h1 style="color: blue; text-align: center; font-size: 150%; margin-bottom: 2em; font-weight: bold;">
-SAML V2.0 Interoperability Deployment Profile V2.0 (Draft)
+SAML V2.0 Interoperability Deployment Profile
 </h1>
 ++++
 
 [horizontal]
 Version:: 2.00
 Date:: {docdate}
-Status:: Community Draft
-License:: https://creativecommons.org/licenses/by/4.0/[Creative Commons Attribution 4.0 International]
+Location:: LINK HERE
+Status:: This document is a Kantara Initiative Group Editors' Draft Document produced by the https://kantarainitiative.org/confluence/display/fiwg/Home[Federation Interoperability Work Group]. It has not yet been approved by the Membership of the Kantara Initiative. See the Kantara Initiative https://kantarainitiative.org/confluence/download/attachments/2293776/Kantara%20Operating%20Procedures%20V2.0-20150226.pdf?version=2&modificationDate=1444240055000&api=v2[Operating Procedures] for more information.
+
+include::contributors.adoc[]
+
+.Abstract
+ABSTRACT HERE
+
+.Copyright Notice
+SAML V2.0 Interoperability Deployment Profile ©2019 Internet2 and/or the respective contributors, used under license.  All rights reserved.
+
+.License
+This work is licensed under the https://creativecommons.org/licenses/by-sa/3.0/us/[Creative Commons Attribution-ShareAlike 3.0 United States License].
+
 
 include::introduction.adoc[]
 
@@ -30,4 +43,3 @@ include::idp_requirements.adoc[]
 
 include::references.adoc[]
 
-include::contributors.adoc[] 
