Various formatting changes decided in the 8/7 call.

--- a/edit/saml2int/idp_requirements.adoc
+++ b/edit/saml2int/idp_requirements.adoc
@@ -1,4 +1,4 @@
-== IdP Requirements
+== Identity Provider Requirements
 
 This section provides requirements specific to IdPs, in addition to the Common Requirements above.
 
